tests/errors/conflicting-use.fil
import "primitives/core.fil";
import "primitives/sequential.fil";

comp Main<G: 3>(
  @interface[G] go_G: 1,
) -> () {
  M := new Mult;
  m0 := M<G>(10, 20);
  m1 := M<G+1>(30, 40);
}
