tests/errors/conflicting-use.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint 1 >= 2
  ┌─ tests/errors/conflicting-use.fil:9:3
  │
8 │   m0 := M<G>(10, 20);
  │   ------------------- Invocation starts at `G'
9 │   m1 := M<G+1>(30, 40);
  │   ^^^^^^^^^^^^^^^^^^^^^ Conflicting invoke, starts at `G+1'
  │
  = Delay requires 2 cycle between event but reuse may occur after 1 cycles

